Fix flaky ExtensionWebRequestApiTest.WebRequestTestOSDD with network service

This test uses an OSDD URL that gives a 404, so allow http errors for
the SimpleURLLoader. It looks like this could flake if there was a delay
between OnReceiveResponse and OnComplete.

Bug: 870588
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I101894bba7c31fcc7a686ab79b6e6bb936c4c26c
Reviewed-on: https://chromium-review.googlesource.com/1187667
Reviewed-by: John Abd-El-Malek <jam@chromium.org>
Commit-Queue: Clark DuVall <cduvall@chromium.org>
Cr-Commit-Position: refs/heads/master@{#585894}
Former-commit-id: 17a92a4bc2a9022f80c9516a01a5179c4b2ab07a